tdf#118666 Fix indentation of headings when pasted as unformatted text

Previously,the problem arose due to headings of various levels aligned at 0.00"
being affected by paragraph numbering rules. In this patch, some checks to skip
indentation for styles such as headings of
various levels that are aligned at 0.00" are introduced.

Change-Id: I5513d78dc7f32a5caf56d93c4bedfc9bd8a8068d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184290
Tested-by: Jenkins
Reviewed-by: Sahil Gautam <sahil.gautam@collabora.com>