sw/source/filter/ascii/ascatr.cxx
@@ -263,15 +263,22 @@ static Writer& OutASC_SwTextNode( Writer& rWrt, SwContentNode& rNode )
     if (pNumRule && !nStrPos && rWrt.m_bExportParagraphNumbering && !bIsOneParagraph)
     {
         bool bIsOutlineNumRule = pNumRule == rNd.GetDoc().GetOutlineNumRule();
-
-        // indent each numbering level by 4 spaces
         OUString level;
         if (!bIsOutlineNumRule)
         {
-            for (int i = 0; i <= rNd.GetActualListLevel(); ++i)
-                level += "    ";
-        }
+            //ensures indentation is not applied to styles such as headings aligned at 0.00",in case of pasting as unformatted text.
+            //checks the left margin & the left margin for tab values is set to 0 & outline level > 0
+            bool bSkipIndentation = false;
+            if (rNd.GetLeftMarginWithNum() == 0 && rNd.GetAttrOutlineLevel() > 0 && rNd.GetLeftMarginForTabCalculation() == 0)
+               bSkipIndentation = true;
 
+            if(!bSkipIndentation)
+            {
+                // indent each numbering level by 4 spaces
+                for (int i = 0; i <= rNd.GetActualListLevel(); ++i)
+                    level += "    ";
+            }
+        }
         // set up bullets or numbering
         OUString numString(rNd.GetNumString());
         if (numString.isEmpty() && !bIsOutlineNumRule)
